# sudoku

./: README.md  stack.yaml  sudoku.cabal
app/: Main.hs
