name:                sudoku
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         sudoku solver
homepage:            http://github.com/name/project
license:             BSD3
license-file:        LICENSE
author:              Demin Valentine
maintainer:          deminvalentin1975@gmail.com
-- copyright:           
category:            Demo
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable sudoku
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/deminvalentin/sudoku
